--- a/app/src/main/res/drawable-anydpi/ic_pause.xml
+++ b/app/src/main/res/drawable-anydpi/ic_pause.xml
@@ -3,9 +3,9 @@
     android:height="44dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#ffffff"
+    android:tint="#333333"
     android:alpha="0.6">
   <path
-      android:pathData="M8,5v14l11,-7z"
-      android:fillColor="#FFFFFF"/>
+      android:pathData="M6,19h4L10,5L6,5v14zM14,5v14h4L18,5h-4z"
+      android:fillColor="#000000"/>
 </vector>
