--- a/app/src/main/res/layout/routine_execution.xml
+++ b/app/src/main/res/layout/routine_execution.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.routines.execution.RoutineExecutionActivity"
-    >
+    tools:context=".ui.routines.execution.RoutineExecutionActivity">
 
     <LinearLayout
         android:id="@+id/cycleLayout"
@@ -42,7 +41,7 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/exerciseCard"
         android:layout_width="match_parent"
-        android:layout_height="450dp"
+        android:layout_height="400dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="10dp"
@@ -69,6 +68,7 @@
                 android:textAppearance="?attr/textAppearanceHeadline4">
 
             </TextView>
+
             <TextView
                 android:id="@+id/exerciseDescription"
                 android:layout_width="wrap_content"
@@ -80,28 +80,29 @@
 
             </TextView>
 
-            <LinearLayout android:layout_height="wrap_content"
-                 android:layout_width="match_parent"
-                android:layout_marginTop="30dp"
-                >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp">
+
                 <ImageView
                     android:id="@+id/exerciseImage"
                     android:layout_width="match_parent"
-                    android:layout_height="250dp"
+                    android:layout_height="220dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="20dp"
-                    android:src="@drawable/r1"
                     android:layout_weight="3"
-                    >
+                    android:src="@drawable/r1">
 
                 </ImageView>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_weight="5"
                     android:gravity="center"
-                    android:orientation="vertical"
-                    android:layout_weight="5">
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/exerciseDuration"
@@ -128,7 +129,6 @@
             </LinearLayout>
 
 
-
         </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
@@ -136,7 +136,7 @@
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="150dp"
         android:background="@color/purple_200"
         android:gravity="center"
         android:orientation="horizontal"
@@ -145,19 +145,54 @@
 
         <ImageView
             android:id="@+id/previousBtn"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_weight="1"
-            android:src="@drawable/ic_previous">
+            android:src="@drawable/ic_previous2">
 
         </ImageView>
 
+        <FrameLayout
+            android:id="@+id/timerLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal">
+            <ImageView
+                android:id="@+id/playBtn"
+                android:src="@drawable/ic_play"
+                 android:layout_height="wrap_content"
+                 android:layout_width="wrap_content"
+                android:layout_gravity="center">
+
+            </ImageView>
+            <ImageView
+                android:id="@+id/pauseBtn"
+                android:src="@drawable/ic_pause"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                >
+
+            </ImageView>
+            <com.mut_jaeryo.circletimer.CircleTimer
+                android:id="@+id/timer"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginVertical="10dp"
+                app:isOutline="false"
+                app:show_text="false">
+
+            </com.mut_jaeryo.circletimer.CircleTimer>
+        </FrameLayout>
+
+
         <ImageView
             android:id="@+id/nextBtn"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_weight="1"
-            android:src="@drawable/ic_next">
+            android:src="@drawable/ic_next2">
 
         </ImageView>
 
